--- a/.github/workflows/gradle-tests.yml
+++ b/.github/workflows/gradle-tests.yml
@@ -17,3 +17,5 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
       - name: Build and run tests
         run: ./gradlew test
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@v4
