Enable write permissions for dependency graph submission in Gradle tests workflow
Signed-off-by: David Scandurra <31861387+SplotyCode@users.noreply.github.com>

--- a/.github/workflows/gradle-tests.yml
+++ b/.github/workflows/gradle-tests.yml
@@ -2,6 +2,8 @@ name: Gradle Tests
 on:
   push:
   pull_request:
+permissions:
+  contents: write # dependency submission
 jobs:
   test:
     runs-on: ubuntu-latest
