Improve ui for EditFiles and add diff

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -3,3 +3,13 @@ product.name=SecureCoder AI
 toolwindow.submit=Submit
 toolwindow.streaming=Streaming...
 warning.emptyPrompt=Please enter a prompt before submitting.
+
+edit.summary=Summary: {0} file(s), {1} change(s), ±{2} lines
+edit.show.diff.tooltip=Show diff
+edit.changes.meta=Changes: {0}  Lines: {1}
+edit.no.changes=No changes detected.
+edit.proposed.new.file.title=Proposed new file - {0}
+edit.proposed.changes.title=Proposed changes - {0}
+edit.empty=Empty
+edit.current.content=Current content
+edit.with.changes=With changes
