Use icon for diff button

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -4,7 +4,7 @@ toolwindow.submit=Submit
 toolwindow.streaming=Streaming...
 warning.emptyPrompt=Please enter a prompt before submitting.
 
-edit.summary=Summary: {0} file(s), {1} change(s), ±{2} lines
+edit.summary=Summary: {0} file(s), {1} change(s), {2} lines
 edit.show.diff.tooltip=Show diff
 edit.changes.meta=Changes: {0}  Lines: {1}
 edit.no.changes=No changes detected.
