--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -4,10 +4,9 @@ toolwindow.submit=Submit
 toolwindow.streaming=Streaming...
 warning.emptyPrompt=Please enter a prompt before submitting.
 
-edit.summary=Summary: {0} file(s), {1} change(s), {2} lines
+edit.summary=Summary: {0} file{0,choice,0#s|1#|1<s}, {1} change{1,choice,0#s|1#|1<s}, {2} line{2,choice,0#s|1#|1<s}
 edit.show.diff.tooltip=Show diff
-edit.changes.meta=Changes: {0}  Lines: {1}
-edit.no.changes=No changes detected.
+edit.changes.meta=Change{0,choice,0#s|1#|1<s}: {0}  Line{1,choice,0#s|1#|1<s}: {1}
 edit.proposed.new.file.title=Proposed new file - {0}
 edit.proposed.changes.title=Proposed changes - {0}
 edit.empty=Empty
