Add missing error locales

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -12,3 +12,6 @@ edit.proposed.changes.title=Proposed changes - {0}
 edit.empty=Empty
 edit.current.content=Current content
 edit.with.changes=With changes
+
+error.uncaught.title=Internal engine error
+error.uncaught.description=Uncaught exception within the engine. This should not happen and is always a bug: {0} ({1})
