--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -8,8 +8,8 @@ warning.emptyPrompt=Please enter a prompt before submitting.
 edit.summary=Summary: {0} file{0,choice,0#s|1#|1<s}, {1} change{1,choice,0#s|1#|1<s}, {2} line{2,choice,0#s|1#|1<s}
 edit.show.diff.tooltip=Show diff
 edit.changes.meta=Change{0,choice,0#s|1#|1<s}: {0}  Line{1,choice,0#s|1#|1<s}: {1}
-edit.proposed.new.file.title=Proposed new file - {0}
-edit.proposed.changes.title=Proposed changes - {0}
+edit.proposed.new.file.title=Proposed New File - {0}
+edit.proposed.changes.title=Proposed Changes - {0}
 edit.empty=Empty
 edit.current.content=Current content
 edit.with.changes=With changes
