Localize settings UI

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -16,3 +16,12 @@ edit.with.changes=With changes
 
 error.uncaught.title=Internal engine error
 error.uncaught.description=Uncaught exception within the engine. This should not happen and is always a bug: {0} ({1})
+
+settings.configurable.display.name=SecureCoder
+settings.group.connection=Connection
+settings.enricher.url=Enricher URL
+settings.group.llmProvider=LLM Provider
+settings.provider=Provider
+settings.ollama.model=Ollama Model
+settings.openrouter.api.key=OpenRouter API Key
+settings.openrouter.model=OpenRouter Model
