Allow opening settings in the tool window

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -1,4 +1,5 @@
 toolwindow.stripe.securecoder=SecureCoder AI 
+toolwindow.settings=Open SecureCoder Settings
 product.name=SecureCoder AI
 
 toolwindow.submit=Submit
