Give engine return value instead of relying on events

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -26,3 +26,7 @@ settings.provider=Provider
 settings.ollama.model=Ollama Model
 settings.openrouter.api.key=OpenRouter API Key
 settings.openrouter.model=OpenRouter Model
+error.generation.title=Failed generating changeset
+error.generation.description=Failed to parse the output of the llm. Maximum amount on retries exceeded! Look for parsing errors above
+error.validation.title=Guardian max retries reached
+error.validation.description=Maximum amount of retries exceeded after {0} tries.
