Add CheckBox CheckBox context

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -30,3 +30,5 @@ error.generation.title=Failed generating changeset
 error.generation.description=Failed to parse the output of the llm. Maximum amount on retries exceeded! Look for parsing errors above
 error.validation.title=Guardian max retries reached
 error.validation.description=Maximum amount of retries exceeded after {0} tries.
+toolwindow.useWholeProject=Complete Project
+toolwindow.useWholeProject.tooltip=When disabled, the context is reduced to currently open files.
