Avoid SendDebugMessage and create more specific events

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -31,5 +31,11 @@ error.generation.title=Failed generating changeset
 error.generation.description=Failed to parse the output of the llm. Maximum amount on retries exceeded! Look for parsing errors above
 error.validation.title=Guardian max retries reached
 error.validation.description=Maximum amount of retries exceeded after {0} tries.
+warning.enrichment.title=Enrichment failed
+warning.enrichment.description=Using original prompt. Reason: {0}
+warning.guardian.title=Guardian result
+warning.guardian.description=Guardian violations: {0}
+warning.llm.title=Malicious or invalid LLM output
+warning.llm.description=Error parsing LLM output: {0}
 toolwindow.useWholeProject=Complete Project
 toolwindow.useWholeProject.tooltip=When disabled, the context is reduced to currently open files.
