--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -1,6 +1,7 @@
 toolwindow.stripe.securecoder=SecureCoder AI
 toolwindow.settings=Open SecureCoder Settings
 product.name=SecureCoder AI
+notification.group.name=SecureCoder AI
 
 toolwindow.submit=Submit
 toolwindow.streaming=Streaming...
