--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -16,6 +16,13 @@ edit.empty=Empty
 edit.current.content=Current content
 edit.with.changes=With changes
 
+edit.apply=Apply
+edit.apply.tooltip=Apply all pending changes
+edit.apply.progress=Applying Edits...
+edit.apply.done.title=Changes Applied
+edit.apply.done.body={0} changes have been successfully applied.
+edit.apply.error.title=Error Applying Changes
+
 error.uncaught.title=Internal engine error
 error.uncaught.description=Uncaught exception within the engine. This should not happen and is always a bug: {0} ({1})
 
