Add placeholder to prompt input

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -15,6 +15,7 @@ edit.proposed.changes.title=Proposed Changes - {0}
 edit.empty=Empty
 edit.current.content=Current content
 edit.with.changes=With changes
+edit.placeholder=Type your task here...
 
 edit.apply=Apply
 edit.apply.tooltip=Apply all pending changes
