Show warning when llm provider is not configured

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -49,6 +49,10 @@ warning.llm.description=Error parsing the LLM (Large Language Model) output: {0}
 toolwindow.useWholeProject=Complete Project
 toolwindow.useWholeProject.tooltip=When disabled, the context is reduced to currently open files.
 
+toolwindow.notConfigured.title=Connect an LLM to use SecureCoder
+toolwindow.notConfigured.desc=No LLM provider is configured. Open settings to choose a provider or enter credentials.
+toolwindow.notConfigured.openSettings=Open Settings
+
 codeql.alreadyInstalled=CodeQL v{0} is already installed.
 codeql.downloading=Downloading CodeQL CLI v{0}...
 codeql.installation.missingExecutable=Installation finished, but executable not found at: {0}
