Dont translate internal error messages

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -57,18 +57,11 @@ codeql.alreadyInstalled=CodeQL v{0} is already installed.
 codeql.downloading=Downloading CodeQL CLI v{0}...
 codeql.installation.missingExecutable=Installation finished, but executable not found at: {0}
 codeql.checkingVersion=Checking for latest CodeQL version...
-codeql.fetchLatestVersion.failed=Failed to fetch latest CodeQL version from GitHub API. Falling back to {0}
-codeql.parseVersion.error=Could not parse version from GitHub API response
-codeql.downloading.from=Downloading CodeQL from: {0}
-codeql.extracting=Extracting CodeQL...
-codeql.walkToolsDir.failed=Failed to walk tools directory for permissions: {0}
-codeql.unsupported.os=Unsupported operating system: {0}
-codeql.setPermissions.failed=Failed to set executable permissions for: {0}
+codeql.extracting=Extracting codeQL...
 
 settings.guardian.dummy=Dummy guardian
 settings.guardian.codeql.enable=Enable CodeQL guardian
 settings.codeql.binary=CodeQL binary
-settings.codeql.selectBinary=Select CodeQL binary
 settings.codeql.test=Test
 settings.codeql.checking=Checking...
 settings.codeql.found=Found CodeQL {0}
