Add debug popup for invalid LLM responses

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -53,6 +53,9 @@ toolwindow.notConfigured.title=Connect an LLM to use SecureCoder
 toolwindow.notConfigured.desc=No LLM provider is configured. Open settings to choose a provider or enter credentials.
 toolwindow.notConfigured.openSettings=Open Settings
 
+toolwindow.events.show.debug.tooltip=Show debug
+toolwindow.events.debug.title=Debug Information
+
 codeql.alreadyInstalled=CodeQL v{0} is already installed.
 codeql.downloading=Downloading CodeQL CLI v{0}...
 codeql.installation.missingExecutable=Installation finished, but executable not found at: {0}
