Redo guardian validations in the frontend

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -56,6 +56,10 @@ toolwindow.notConfigured.openSettings=Open Settings
 toolwindow.events.show.debug.tooltip=Show debug
 toolwindow.events.debug.title=Debug Information
 
+validation.in_progress=Validation in progress?
+validation.succeeded=Validation succeeded
+validation.warnings=Validation warnings
+
 codeql.alreadyInstalled=CodeQL v{0} is already installed.
 codeql.downloading=Downloading CodeQL CLI v{0}...
 codeql.installation.missingExecutable=Installation finished, but executable not found at: {0}
