Present warnings more user friendly

--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -42,10 +42,8 @@ error.validation.title=Validation Engine: Maximum retries reached
 error.validation.description=The post-generation validation engine did not approve any generated output after {0} attempts. Automatic validation has been aborted.
 warning.enrichment.title=Automatic input augmentation failed
 warning.enrichment.description=The automatic input augmentation failed. The original input will be used instead. Reason: {0}.
-warning.guardian.title=Validation Result: Automated Post-Generation Review
-warning.guardian.description=The post-generation validation engine has reported the following violations: {0}. SecureCoder will attempt to regenerate or correct the output using these findings.
 warning.llm.title=Malicious or invalid LLM output
-warning.llm.description=Error parsing the LLM (Large Language Model) output: {0}. The language model produced a response that could not be safely or reliably parsed.
+warning.llm.description=We couldn't use the model's response this time. We're planning the next steps.
 toolwindow.useWholeProject=Complete Project
 toolwindow.useWholeProject.tooltip=When disabled, the context is reduced to currently open files.
 
