--- a/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
+++ b/app/intellij-plugin/src/main/resources/messages/SecureCoderBundle.properties
@@ -3,6 +3,8 @@ toolwindow.settings=Open SecureCoder Settings
 product.name=SecureCoder AI
 notification.group.name=SecureCoder AI
 
+common.notAvailable=N/A
+
 toolwindow.submit=Submit
 toolwindow.streaming=Streaming...
 warning.emptyPrompt=Please enter a prompt before submitting.
@@ -19,7 +21,7 @@ edit.placeholder=Type your task here...
 
 edit.apply=Apply
 edit.apply.tooltip=Apply all pending changes
-edit.apply.progress=Applying Edits...
+edit.apply.progress=Applying edits...
 edit.apply.done.title=Changes Applied
 edit.apply.done.body={0} changes have been successfully applied.
 edit.apply.error.title=Error Applying Changes
@@ -44,6 +46,8 @@ warning.enrichment.title=Automatic input augmentation failed
 warning.enrichment.description=The automatic input augmentation failed. The original input will be used instead. Reason: {0}.
 warning.llm.title=Malicious or invalid LLM output
 warning.llm.description=We couldn't use the model's response this time. We're planning the next steps.
+warning.guardian.short.violation=May contain {0}
+warning.guardian.short.failure={0} internally failed
 toolwindow.useWholeProject=Complete Project
 toolwindow.useWholeProject.tooltip=When disabled, the context is reduced to currently open files.
 
@@ -54,9 +58,8 @@ toolwindow.notConfigured.openSettings=Open Settings
 toolwindow.events.show.debug.tooltip=Show debug
 toolwindow.events.debug.title=Debug Information
 
-validation.in_progress=Validation in progress?
+validation.in_progress=Validation in progress...
 validation.succeeded=Validation succeeded
-validation.warnings=Validation warnings
 
 codeql.alreadyInstalled=CodeQL v{0} is already installed.
 codeql.downloading=Downloading CodeQL CLI v{0}...
