--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,14 @@ bin/
 /nbdist/
 /.nb-gradle/
 
+### Python ###
+**/__pycache__/
+**/*.pyc
+**/.venv/
+**/.venvs/
+
+
+
 ### VS Code ###
 .vscode/
 
